vpc/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = "${var.cidr}"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Project     = "${var.project}"
    Environment = "${var.environment}"
    Name        = "${var.project}-${var.environment}"
  }
}

resource "aws_subnet" "public" {
  count = "${length(var.public_subnets)}"

  vpc_id                  = "${aws_vpc.vpc.id}"
  cidr_block              = "${element(var.public_subnets, count.index)}"
  availability_zone       = "${element(var.availability_zones, count.index)}"
  map_public_ip_on_launch = true

  tags = {
    Project     = "${var.project}"
    Environment = "${var.environment}"
    Name        = "${var.project}-${var.environment}-public-${element(var.availability_zones, count.index)}"
    SubnetType  = "public"
  }
}

resource "aws_subnet" "private" {
  count = "${length(var.private_subnets)}"

  vpc_id            = "${aws_vpc.vpc.id}"
  cidr_block        = "${element(var.private_subnets, count.index)}"
  availability_zone = "${element(var.availability_zones, count.index)}"

  tags = {
    Project     = "${var.project}"
    Environment = "${var.environment}"
    Name        = "${var.project}-${var.environment}-private-${element(var.availability_zones, count.index)}"
    SubnetType  = "private"
  }
}

resource "aws_subnet" "database" {
  count = "${length(var.database_subnets)}"

  vpc_id            = "${aws_vpc.vpc.id}"
  cidr_block        = "${element(var.database_subnets, count.index)}"
  availability_zone = "${element(var.availability_zones, count.index)}"

  tags = {
    Project     = "${var.project}"
    Environment = "${var.environment}"
    Name        = "${var.project}-${var.environment}-db-${element(var.availability_zones, count.index)}"
    SubnetType  = "db"
  }
}

resource "aws_route_table" "public" {
  vpc_id = "${aws_vpc.vpc.id}"

  tags = {
    Project     = "${var.project}"
    Environment = "${var.environment}"
    Name        = "${var.project}-${var.environment}-public"
  }
}

resource "aws_route_table_association" "public" {
  count = "${length(var.public_subnets)}"

  subnet_id      = "${element(aws_subnet.public.*.id, count.index)}"
  route_table_id = "${aws_route_table.public.id}"
}

resource "aws_route_table" "private" {
  count  = "${length(var.private_subnets)}"
  vpc_id = "${aws_vpc.vpc.id}"

  tags = {
    Project     = "${var.project}"
    Environment = "${var.environment}"
    Name        = "${var.project}-${var.environment}-private-${element(var.availability_zones, count.index)}"
  }
}

resource "aws_route_table_association" "private" {
  count = "${length(var.private_subnets)}"

  subnet_id      = "${element(aws_subnet.private.*.id, count.index)}"
  route_table_id = "${element(aws_route_table.private.*.id, count.index)}"
}

resource "aws_route_table_association" "database" {
  count = "${length(var.database_subnets)}"

  subnet_id      = "${element(aws_subnet.database.*.id, count.index)}"
  route_table_id = "${element(aws_route_table.private.*.id, count.index)}"
}
# Only public subnets have a route to internet gateway
resource "aws_route" "public_internet_gateway" {
  route_table_id         = "${aws_route_table.public.id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.internet_gateway.id}"

  timeouts {
    create = "5m"
  }
}

resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = "${aws_vpc.vpc.id}"

  tags = {
    Project     = "${var.project}"
    Environment = "${var.environment}"
    Name        = "${var.project}-${var.environment}"
  }
}

# Ideally there would be one NAT Gateway per Availability Zone, but due to cost we have a single one.
resource "aws_eip" "nat" {
  vpc = true

  tags = {
    Project     = "${var.project}"
    Environment = "${var.environment}"
    Name        = "${var.project}-${var.environment}-${element(var.availability_zones, 0)}"
  }
}

resource "aws_nat_gateway" "nate_gateway" {
  allocation_id = "${aws_eip.nat.id}"
  subnet_id     = "${element(aws_subnet.public.*.id, 0)}"

  tags = {
    Project     = "${var.project}"
    Environment = "${var.environment}"
    Name        = "${var.project}-${var.environment}-${element(var.availability_zones, 0)}"
  }

  depends_on = ["aws_internet_gateway.internet_gateway"]
}
# Private subnet accesses the internet through NAT gateway
resource "aws_route" "private_nat_gateway" {
  count = "${length(var.private_subnets)}"

  route_table_id         = "${element(aws_route_table.private.*.id, count.index)}"
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = "${aws_nat_gateway.nate_gateway.id}"
}
